# mdview

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: highlight.rs  main.rs  render.rs  watch.rs
tests/fixtures/: blockquotes.md  code-blocks.md  edge-cases.md  headings.md  inline.md  lists.md  tables.md
