[package]
name = "mdview"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ansi-to-tui = "7"
crossterm = { version = "0.28", features = ["event-stream"] }
notify = "7"
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
ratatui = "0.29"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
unicode-width = "0.2"
